...
            app:destination="@id/eventSignupList" />
        <action
            android:id="@+id/toManageEventFragment"
            app:destination="@id/manageEventFragment" />
        <action
            android:id="@+id/toNotifyEntrantsFragment"
            app:destination="@+id/notifyEntrantsFragment" />
        <action
            android:id="@+id/to_mapFragment"
            app:destination="@+id/mapFragment" />

    </fragment>

...
